--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
 title: Junwoo's Blog
 description: Github Blog for an entity named Junwoo Hwang
+repository: junwoo091400/junwoo091400.github.io
